--- a/application/index/view/index.index.html
+++ b/application/index/view/index.index.html
@@ -137,24 +137,24 @@ Demo<br><br>
     }
 
     //向后端添加弹幕测试  这个函数没有调用
-    // function insert() {
-    //     var newd = {"text": "new2", "color": "green", "size": "1", "position": "0", "time": 50};
-    //     str_newd = JSON.stringify(newd);
-    //     $.post("stone.php", {danmu: str_newd}, function (data, status) {
-    //         alert(data)
-    //     });
-    // }
+    function insert() {
+        var newd = {"text": "new2", "color": "green", "size": "1", "position": "0", "time": 50};
+        str_newd = JSON.stringify(newd);
+        $.post("stone.php", {danmu: str_newd}, function (data, status) {
+            alert(data)
+        });
+    }
 
     //从后端获取到弹幕并添加
-    // function query() {
-    //     $.get("query.php", function (data, status) {
-    //         var danmu_from_sql = eval(data);
-    //         for (var i = 0; i < danmu_from_sql.length; i++) {
-    //             var danmu_ls = eval('(' + danmu_from_sql[i] + ')');
-    //             $('#danmu').danmu("addDanmu", danmu_ls);
-    //         }
-    //     });
-    // }
+    function query() {
+        $.get("query.php", function (data, status) {
+            var danmu_from_sql = eval(data);
+            for (var i = 0; i < danmu_from_sql.length; i++) {
+                var danmu_ls = eval('(' + danmu_from_sql[i] + ')');
+                $('#danmu').danmu("addDanmu", danmu_ls);
+            }
+        });
+    }
 
     //发送弹幕，使用了文档README.md第7节中推荐的方法
     function send() {
