--- a/application/index/view/index.index.html
+++ b/application/index/view/index.index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jQuery.danmu.js jQuery弹幕插件</title>
+    <title>弹幕made by diligentyang</title>
     <style>
         body {
             font-family: "Microsoft YaHei" ! important;
@@ -21,8 +21,8 @@
 
         #danmuarea {
             position: relative;
-            background: #FFF;
-            width: 100%;
+            background: #222;
+            width: 800px;
             height: 445px;
             margin-left: auto;
             margin-right: auto;
@@ -37,7 +37,7 @@
             line-height: 2em;
         }
     </style>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="/static/js/jquery.danmu.js"></script>
 </head>
 
@@ -50,16 +50,17 @@ Demo<br><br>
 </div>
 <!--控制区-->
 <div class="ctr">
-    <button type="button" onclick="resumer() ">弹幕开始/继续</button>&nbsp;&nbsp;&nbsp;&nbsp;
     <button type="button" onclick="pauser()">弹幕暂停</button> &nbsp;&nbsp;&nbsp;&nbsp;
+    <button type="button" onclick="resumer() ">弹幕继续</button>&nbsp;&nbsp;&nbsp;&nbsp;
     显示弹幕:<input type='checkbox' checked='checked' id='ishide' value='is' onchange='changehide()'> &nbsp;&nbsp;&nbsp;&nbsp;
     弹幕透明度:
     <input type="range" name="op" id="op" onchange="op()" value="100"> <br>
     当前弹幕运行时间(秒)：<span id="time"></span>&nbsp;&nbsp;
-    设置当前弹幕时间(秒)： <input type="text" id="set_time" max="20" value="0"/>
-    <button type="button" onclick="settime()">设置</button>
+    <!--设置当前弹幕时间(秒)： <input type="text" id="set_time" max=20 />
+    <button type="button"  onclick="settime()">设置</button>-->
     <br>
     发弹幕:
+
     <select name="size" id="text_size">
         <option value="1">大文字</option>
         <option value="0">小文字</option>
@@ -73,6 +74,35 @@ Demo<br><br>
     <button type="button" onclick="send()">发送</button>
 </div>
 <script>
+    //WebSocket
+    var wsServer = 'ws://47.92.205.131:9505';
+    var websocket = new WebSocket(wsServer);
+
+    websocket.onopen = function (evt) {
+        console.log("Connected to WebSocket server.");
+        /*websocket.send("gaga");*/
+        //连上之后就打开弹幕
+        $('#danmu').danmu('danmuResume');
+    };
+
+    websocket.onclose = function (evt) {
+        console.log("Disconnected");
+    };
+
+    websocket.onmessage = function (evt) {
+        console.log('Retrieved data from server: ' + evt.data);
+        var time = $('#danmu').data("nowTime") + 1;
+        var text_obj = evt.data + ',"time":' + time + '}';//获取加上当前时间
+        console.log(text_obj);
+        var new_obj = eval('(' + text_obj + ')');
+        $('#danmu').danmu("addDanmu", new_obj);//添加弹幕
+    };
+
+    websocket.onerror = function (evt, e) {
+        console.log('Error occured: ' + evt.data);
+    };
+
+
     //初始化
     $("#danmu").danmu({
         left: 0,
@@ -85,14 +115,6 @@ Demo<br><br>
         font_size_big: 24,
         top_botton_danmu_time: 6000
     });
-    query();//  从后端获取弹幕并添加
-
-    //初始示范的三个弹幕
-    // $("#danmu").danmu("addDanmu", [
-    //     {text: "这是滚动弹幕", color: "white", size: 1, position: 0, time: 2}
-    //     , {text: "这是顶部弹幕", color: "yellow", size: 1, position: 1, time: 2}
-    //     , {text: "这是底部弹幕", color: "red", size: 1, position: 2, time: 2}
-    // ]);
 
     //一个定时器，监视弹幕时间并更新到页面上
     function timedCount() {
@@ -129,46 +151,21 @@ Demo<br><br>
         alert($('#danmu').data("paused"));
     }
 
-    //添加弹幕测试  这个函数没有调用
-    function add() {
-        var newd =
-            {"text": "new2", "color": "green", "size": "1", "position": "0", "time": 60};
-        $('#danmu').danmu("addDanmu", newd);
-    }
-
-    //向后端添加弹幕测试  这个函数没有调用
-    function insert() {
-        var newd = {"text": "new2", "color": "green", "size": "1", "position": "0", "time": 50};
-        str_newd = JSON.stringify(newd);
-        $.post("stone.php", {danmu: str_newd}, function (data, status) {
-            alert(data)
-        });
-    }
-
-    //从后端获取到弹幕并添加
-    function query() {
-        $.get("query.php", function (data, status) {
-            var danmu_from_sql = eval(data);
-            for (var i = 0; i < danmu_from_sql.length; i++) {
-                var danmu_ls = eval('(' + danmu_from_sql[i] + ')');
-                $('#danmu').danmu("addDanmu", danmu_ls);
-            }
-        });
-    }
-
     //发送弹幕，使用了文档README.md第7节中推荐的方法
     function send() {
         var text = document.getElementById('text').value;
-        var items = ['#009933','#0033CC','#660099','#33FF00','#FF0000','#FF9900','#FF00FF'];
+        var items = ['#009933', '#0033CC', '#660099', '#33FF00', '#FF0000', '#FF9900', '#FF00FF'];
         var color = items[Math.floor(Math.random() * items.length)];
         var position = document.getElementById('position').value;
-        var time = $('#danmu').data("nowTime") + 1;
+        //var time = $('#danmu').data("nowTime")+1;
         var size = document.getElementById('text_size').value;
-        var text_obj = '{ "text":"' + text + '","color":"' + color + '","size":"' + size + '","position":"' + position + '","time":' + time + '}';
-        $.post("stone.php", {danmu: text_obj});
-        var text_obj = '{ "text":"' + text + '","color":"' + color + '","size":"' + size + '","position":"' + position + '","time":' + time + ',"isnew":""}';
-        var new_obj = eval('(' + text_obj + ')');
-        $('#danmu').danmu("addDanmu", new_obj);
+        //var text_obj='{ "text":"'+text+'","color":"'+color+'","size":"'+size+'","position":"'+position+'","time":'+time+'}';
+        //为了处理简单，方便后续加time，和isnew，就先酱紫发一半吧。
+        //注：time为弹幕出来的时间，isnew为是否加边框，自己发的弹幕，常理上来说是有边框的。
+        var text_obj = '{ "text":"' + text + '","color":"' + color + '","size":"' + size + '","position":"' + position + '"';
+        //利用websocket发送
+        websocket.send(text_obj);
+        //清空相应的内容
         document.getElementById('text').value = '';
     }
 
