--- a/application/index/view/index.index.html
+++ b/application/index/view/index.index.html
@@ -28,6 +28,10 @@
             margin-right: auto;
         }
 
+        #danmu {
+            background-image: url("/static/image/3.jpg");
+        }
+
         .center {
             text-align: center;
         }
